fix error display spacing, fix padding on glyph in error and no data, fix icon sizing in item display.

--- a/packages/terra-clinical-no-data-view/src/NoDataView.scss
+++ b/packages/terra-clinical-no-data-view/src/NoDataView.scss
@@ -4,13 +4,14 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  padding: 2.857rem 0 1.429rem;
+  padding: 1.429rem 0;
   width: 100%;
 }
 
 .terraClinical-NoDataView-glyph {
   flex: 0 0 auto;
   padding-bottom: 0.2857rem;
+  padding-top: 1.429rem;
 }
 
 .terraClinical-NoDataView-heading {
